metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__Account__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Account of the User that this cart was created for.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>E_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>