metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__AdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AdjustmentAmount__c</fullName>
    <description>Post order placement adjustment amount that can be used by back-end processing to adjust an order total without adjusting other fields. This information is captured here and transferred to order during place-order call.</description>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>