metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__AnonymousId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AnonymousId__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checks if the user is anonymous or not.
If true the user is anonymous or not logged in
if false he is logged in. Will be used in merging of an anonymous cart with a logged in users cart.</description>
    <label>Anonymous Id</label>
    <type>Checkbox</type>
</CustomField>