metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__BillTo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BillTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to a CC Contact Address object that contains the bill to address data. This will be a unique copy of the address information captured during checkout.</description>
    <label>Bill To</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>Carts (BillToID)</relationshipLabel>
    <relationshipName>E_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>