metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__BuyerMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerMobilePhone__c</fullName>
    <description>Buyer&apos;s mobile phone number</description>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>