metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__CartStatus__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartStatus__c</fullName>
    <description>Cart Status: Every cart is created with a &quot;Open&quot; state, and set to &quot;Closed&quot; state after a corresponding order is placed.</description>
    <label>Cart Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>