metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__CartType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CartType__c</fullName>
    <description>Cart type &quot;WishList&quot; can be used to keep track of items users want.</description>
    <label>Cart Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Read-Only WishList</fullName>
            </value>
            <value>
                <fullName>WishList</fullName>
            </value>
            <value>
                <fullName>Cart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>