metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__CCEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCEmailAddress__c</fullName>
    <label>CCEmailAddress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>