metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__RepricedDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RepricedDate__c</fullName>
    <description>The date and time that B2B Commerce most recently priced the cart items. By default, this value is the date and time the cart was created. B2B Commerce compares this value against the Valid Prices Date storefront setting to determine whether to reprice items in the cart.</description>
    <inlineHelpText>The date and time that B2B Commerce most recently priced the cart items.</inlineHelpText>
    <label>Repriced Date</label>
    <type>DateTime</type>
</CustomField>