metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__ShipAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipAmount__c</fullName>
    <description>Order shipment charges. This information is captured here and transferred to order during place-order call.</description>
    <label>Ship Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>