metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__ShipComplete__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ship complete indicator captured during the checkout process.</description>
    <label>Ship Complete</label>
    <type>Checkbox</type>
</CustomField>