metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TaxAmount__c</fullName>
    <description>Tax amount captured during order placement.</description>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>