metadata/force-app/main/default/objects/ccrz__E_Cart__c/fields/ccrz__TaxSubTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TaxSubTotalAmount__c</fullName>
    <description>Sum of CC Cart Item : Item Total</description>
    <label>Tax SubTotal Amount</label>
    <summarizedField>ccrz__E_CartItem__c.ccrz__ItemTotal__c</summarizedField>
    <summaryForeignKey>ccrz__E_CartItem__c.ccrz__Cart__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>